// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Converts youtube http-url to https 1`] = `
Object {
  "oembed": Object {
    "html": "<iframe src=\\"https://youtube.com/videoid\\"></iframe>",
  },
  "url": "https://youtube.com/videoid",
}
`;

exports[`Leaves youtube https-url be 1`] = `
Object {
  "oembed": Object {
    "html": "<iframe src=\\"https://youtube.com/anotherid\\"></iframe>",
  },
  "url": undefined,
}
`;
